feat: relay - CLI tool for managing Burp Suite installations (#1)
* feat: initialize relay core skeleton

   Add basic project structure with:
   - cmd/relay/main.go with placeholder implementation
   - pkg/errors for custom error types
   - pkg/version for build version info
   - pkg/config for configuration
   - internal/plan for plan interface
   - CI/CD workflows, Makefile, and goreleaser config

* feat: add config schema, defaults, and validation

* feat: add cross-platform path resolution

* feat: introduce immutable lifecycle plans

* feat: add filesystem execution engine with dry-run

* feat: introduce burpsuite product module

* feat: add downloader and burpsuite artifact fetch

* feat: generate platform-specific launchers

* feat: add runtime execution and relay launch

* feat: add CLI, diagnostics, tests, and release infrastructure